# ava_agents

./: .gitignore  AGENTS.md  README.md  pyproject.toml
agents/: README.md
agents/prompts/: 00-platform-context.md  _agent-template.md  atlas.md  context-extractor.md  experiment-designer.md  judge.md  quality-gate.md  risk-auditor.md  scout.md  sentinel.md  smith.md  trend-mapper.md
agents/templates/: human-review-packet.md
data/: README.md  state.json
data/runs/20260323T164512Z/: atlas_notes.md  human_review_packet.md  judge_report.json  quality_gate.json  scout_discoveries.json  sentinel_report.json  smith_prompts.json
data/runs/20260323T164512Z/context_profiles/: r-buildapc.json
data/runs/20260323T164718Z/: atlas_human_readable_report.md  atlas_notes.md  human_review_packet.md  judge_report.json  quality_gate.json  scout_discoveries.json  sentinel_report.json  smith_prompts.json
data/runs/20260323T164718Z/context_profiles/: r-buildapc.json  r-nfl_draft.json
data/schemas/: scout_discoveries.schema.json
docs/: agentic_seeding_master_prompt.md  dependencies-health-check.md  dependency-audit.md  sources.md
scripts/: check_deps.py  com.atlas.cycle.plist.example  create_agent_prompt.py  install_launchd.sh  pipeline_automation.py  run_atlas_cycle.py
web/: index.html
