[project]
name = "atlas-agents"
version = "0.1.0"
description = "Agentic Guerrilla Seeding System — prompt pipeline and local orchestration helpers"
readme = "README.md"
requires-python = ">=3.10"

# No third-party runtime dependencies.
# All scripts (scripts/*.py) use the Python standard library only.
dependencies = []

[project.scripts]
atlas-cycle   = "scripts.run_atlas_cycle:main"
atlas-pipeline = "scripts.pipeline_automation:main"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"

[tool.ruff]
target-version = "py310"
line-length = 100
